--- a/src/pages/users/users.css
+++ b/src/pages/users/users.css
@@ -1,3 +1,31 @@
 .users {
   flex: 4;
 }
+
+.userNamaePhoto {
+  display: flex;
+  align-items: center;
+}
+
+.userImage {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 5px;
+}
+
+.userEdit {
+  border: none;
+  border-radius: 10px;
+  padding: 5px 10px;
+  background-color: aquamarine;
+  color: white;
+  cursor: pointer;
+  margin-right: 20px;
+}
+
+.userDelete {
+  color: red;
+  cursor: pointer;
+}
